Fix mobile layout issues, hopefully

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -112,3 +112,10 @@ main {
     padding-left: 0;
   }
 }
+body{
+  max-width:100%;
+}
+.navbar{
+  max-width:100%;
+}
+html,body{overflow-x: hidden;}
